# cinder

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  Makefile.toml  README.md  config.json  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: cd.yml  ci.yml
benches/: search.rs
lib/: chess.rs  cinder.rs  lib.rs  nnue.rs  params.rs  search.rs  simd.rs  syzygy.rs  uci.rs  util.rs
lib/chess/: bitboard.rs  board.rs  castles.rs  color.rs  file.rs  geometry.rs  magic.rs  move.rs  moves.rs  outcome.rs  perspective.rs  phase.rs  piece.rs  pins.rs  placement.rs  position.rs  rank.rs  rays.rs  role.rs  square.rs  threats.rs  zobrist.rs
lib/nnue/: accumulator.rs  evaluator.rs  feature.rs  hidden.rs  hidden1.rs  hidden2.rs  input.rs  layer.rs  layer12.rs  layer23.rs  layer34.rs  layer3o.rs  layer4o.rs  lin.rs  lnn.rs  lno.rs  lro.rs  material.rs  output.rs  positional.rs  residual.rs  synapse.rs  transformer.rs  value.rs
lib/params/: constant.rs  variable.rs
lib/search/: attention.rs  continuation.rs  control.rs  correction.rs  depth.rs  engine.rs  executor.rs  gravity.rs  history.rs  info.rs  killers.rs  limits.rs  line.rs  moves.rs  options.rs  ply.rs  pv.rs  rating.rs  score.rs  statistics.rs  tables.rs  transposition.rs  value.rs
lib/simd/: aligned.rs  broadcast1x8.rs  compress.rs  find.rs  halve.rs  mask.rs  mul2x16.rs  mul4x8.rs  muladd2x16.rs  muladd4x8.rs  mulhi.rs  nzs.rs  pack.rs  permute.rs  powi.rs  shlv.rs  shuffle.rs
lib/syzygy/: dtz.rs  fs.rs  material.rs  table.rs  tablebase.rs  wdl.rs
lib/uci/: inbound.rs  outbound.rs  parser.rs
lib/util/: align.rs  aligned.rs  assume.rs  atomic.rs  binary.rs  bits.rs  bounded.rs  bytes.rs  cache.rs  counter.rs  float.rs  int.rs  integer.rs  memory.rs  num.rs  parsers.rs  saturating.rs  seq.rs  slice.rs  thread.rs  timer.rs  vault.rs
tests/: syzygy.rs
