[package]
name = "cinder"
version = "0.3.1"
authors = ["Bruno Dutra <brunocodutra@gmail.com>"]
edition = "2024"
description = "A hobby chess engine"
repository = "https://github.com/brunocodutra/cinder.git"
license = "GPL-3.0"
readme = "README.md"
keywords = ["chess"]
default-run = "cinder"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[features]
default = ["bullet?/cpu"]
spsa = ["rand/thread_rng", "dep:ron", "dep:serde"]
trainer = ["dep:bullet"]

[dependencies]
anyhow = { version = "1.0.100", default-features = false, features = ["std"] }
arrayvec = { version = "0.7.6", default-features = false, features = ["std"] }
atomic = { version = "0.6.1", default-features = false, features = ["std"] }
bytemuck = { version = "1.23.2", default-features = false, features = [
    "const_zeroed",
    "derive",
    "extern_crate_alloc",
    "min_const_generics"
] }
byteorder = { version = "1.5.0", default-features = false, features = ["std"] }
clap = { version = "4.5.48", default-features = false, features = [
    "derive",
    "error-context",
    "help",
    "std",
] }
ctor = { version = "0.5.0", default-features = false, features = ["proc_macro"] }
derive_more = { version = "2.0.1", default-features = false, features = [
    "add",
    "add_assign",
    "constructor",
    "debug",
    "deref",
    "deref_mut",
    "display",
    "error",
    "from",
    "into_iterator",
    "mul",
    "mul_assign",
    "not",
] }
futures = { version = "0.3.31", default-features = false, features = [
    "async-await",
    "executor",
    "std",
] }
memmap2 = { version = "0.9.8", default-features = false }
nom = { version = "8.0.0", default-features = false, features = ["std"] }
rand = { version = "0.9.2", default-features = false, features = ["small_rng", "std"] }
rustc-hash = { version = "2.1.1", default-features = false, features = ["std"] }
ruzstd = { version = "0.8.1", default-features = false, features = ["std"] }

# SPSA
ron = { version = "0.11.0", optional = true, default-features = false, features = ["std"] }
serde = { version = "1.0.227", optional = true, default-features = false, features = [
    "derive",
    "std",
] }

# Trainer
bullet = { git = "https://github.com/jw1912/bullet", package = "bullet_lib", optional = true, default-features = false }

[dev-dependencies]
criterion = { version = "0.7.0" }
criterion-macro = { version = "0.4.0" }
proptest = { version = "1.7.0" }
rand = { version = "0.9.2" }
reqwest = { version = "0.12.22", features = ["blocking"] }
tempfile = "3.22.0"
test-strategy = { version = "0.4.3" }

[profile.release]
codegen-units = 1
panic = "abort"
lto = true
strip = true

[profile.dev]
opt-level = 3

[profile.bench]
debug = true
strip = false

[lib]
name = "cinder"
path = "lib/lib.rs"
bench = false

[[bin]]
name = "cinder"
path = "bin/cinder.rs"
bench = false

[[bin]]
name = "spsa"
path = "bin/spsa.rs"
required-features = ["spsa"]
bench = false

[[bin]]
name = "trainer"
path = "bin/trainer.rs"
required-features = ["trainer"]
bench = false

[[test]]
name = "syzygy"
path = "tests/syzygy.rs"
bench = false

[[bench]]
name = "search"
