[package]
name = "cinder"
version = "0.4.1"
authors = ["Bruno Dutra <brunocodutra@gmail.com>"]
edition = "2024"
description = "A hobby chess engine"
repository = "https://github.com/brunocodutra/cinder.git"
license = "GPL-3.0"
readme = "README.md"
keywords = ["chess"]
default-run = "cinder"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[features]
spsa = ["dep:rand", "dep:ron", "dep:serde"]
trainer = ["dep:bullet"]
no_panic = ["dep:no-panic"]

[dependencies]
anyhow = { version = "1.0.102", default-features = false, features = ["std"] }
atomic = { version = "0.6.1", default-features = false, features = ["std"] }
bytemuck = { version = "1.25.0", default-features = false, features = [
    "extern_crate_std",
    "latest_stable_rust",
] }
byteorder = { version = "1.5.0", default-features = false, features = ["std"] }
clap = { version = "4.5.60", default-features = false, features = [
    "derive",
    "error-context",
    "help",
    "std",
] }
ctor = { version = "0.6.3", default-features = false, features = [
    "proc_macro",
] }
derive_more = { version = "2.1.1", default-features = false, features = [
    "as_ref",
    "constructor",
    "debug",
    "deref",
    "deref_mut",
    "display",
    "error",
    "from",
    "into_iterator",
] }
futures = { version = "0.3.32", default-features = false, features = [
    "async-await",
    "executor",
    "std",
] }
memmap2 = { version = "0.9.10", default-features = false }
nom = { version = "8.0.0", default-features = false, features = ["std"] }
rustc-hash = { version = "2.1.1", default-features = false, features = ["std"] }

# spsa
rand = { version = "0.10.0", optional = true, default-features = false, features = [
    "std",
    "thread_rng",
] }
ron = { version = "0.12.0", optional = true, default-features = false, features = [
    "std",
] }
serde = { version = "1.0.228", optional = true, default-features = false, features = [
    "derive",
    "std",
] }

# trainer
bullet = { git = "https://github.com/jw1912/bullet", package = "bullet_lib", optional = true, default-features = false }

# no_panic
no-panic = { version = "0.1.36", default-features = false, optional = true }

[dev-dependencies]
proptest = { version = "1.10.0" }
rand = { version = "0.10.0" }
reqwest = { version = "0.13.2", features = ["blocking"] }
tempfile = "3.26.0"
test-strategy = { version = "0.4.5" }

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
strip = "none"
lto = true

[profile.dist]
inherits = "release"
panic = "abort"
strip = true

[lib]
name = "cinder"
path = "lib/lib.rs"

[[bin]]
name = "cinder"
path = "bin/cinder.rs"

[[bin]]
name = "spsa"
path = "bin/spsa.rs"
required-features = ["spsa"]

[[bin]]
name = "trainer"
path = "bin/trainer.rs"
required-features = ["trainer"]

[[test]]
name = "syzygy"
path = "tests/syzygy.rs"
